@@ -15,6 +15,8 @@ changes in sbcl-0.9.14 relative to sbcl-0.9.13:
   * minor incompatible change: the :SB-LDB feature is now enabled by
     default, and DISABLE-DEBUGGER and ENABLE-DEBUGGER also affect
     the low-level debugger.
+  * bug fix: global optimization policy was not visible in LOCALLY and 
+    MACROLET forms.
   * bug fix: class objects can be used as specializers in methods.
     (reported by Pascal Costanza)
   * bug fix: native unparsing of pathnames with :DIRECTORY NIL failed
